[package]
name = "cowblock"
version = "1.0.0"
edition = "2018"
rust-version = "1.60"
description = "Block-level copy-on-write tool"
repository = "https://github.com/remram44/cowblock"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
clap = "3.1"
fuser = "0.11"
libc = "0.2"

[dev-dependencies]
tempfile = "3.3"
